--- a/config/actions.yml
+++ b/config/actions.yml
@@ -1,101 +1,101 @@
 ---
-- あいろんをかける
-- あむ
+- アイロンをかける
+- 編む
 - あやす
-- いぬをつなげる
-- いのる
-- いれずみをいれる
-- うく
-- うたう
-- うったえる
-- うなずく
-- うめく
-- うめる
-- えをかく
-- おいかける
-- おおきさをはかる
-- おかねをはらう
-- おこる
-- おちる
-- おふろにはいる
-- およぐ
-- かがやく
-- かむ
-- かわをなめす
-- がむをかむ
-- きすをする
-- きめる
-- きょうそうする
-- きりきざむ
-- くぎをうつ
-- くすりをのむ
-- くるまにのる
-- けずる
-- けっこんする
-- けっとうする
-- ける
-- ころがる
-- こわす
-- こーどをかく
-- ごうとうする
-- さかだちする
-- さける
-- しばる
-- じかんをはかる
-- じまんする
-- じゃまする
-- じゅうどうする
-- じゅうをうつ
-- すわる
-- せきをする
-- そうじする
-- そめる
-- たべる
-- ちゃんねるをかえる
-- ちゅうゆする
-- つかまえる
-- つかまる
-- つみあげる
-- つる
-- てらす
-- てをふる
-- てをあげる
-- とうちゃくする
-- なく
-- なぐる
-- なめる
-- においをかぐ
-- にらみつける
-- ねむる
-- のこぎりでひく
-- はなす
-- ばくはする
-- ぱんとまいむする
-- ひげをそる
-- ひざまずく
-- ひっこす
-- ひやす
-- ぴあのをひく
-- ぴょんととぶ
-- ふねをこぐ
-- ほえる
-- ほっけーをする
-- ぽんとたたく
-- まいあがる
-- まがおになる
-- まける
-- まげる
-- まもる
-- まよう
-- めをつぶる
-- めをまわす
-- めーるをかく
-- もぐる
-- ゆみをひく
-- ようせつする
-- よこたわる
-- よごす
-- らくがきする
-- ろくおんする
-- わらう
-- わらわせる
+- 犬をつなげる
+- 祈る
+- 刺青を入れる
+- 浮く
+- 歌う
+- 訴える
+- 頷く
+- 呻く
+- 埋める
+- 絵を描く
+- 追いかける
+- 大きさを測る
+- お金を払う
+- 怒る
+- 落ちる
+- お風呂に入る
+- 思いつく
+- 泳ぐ
+- 輝く
+- 噛む
+- 革をなめす
+- ガムを噛む
+- キスをする
+- 競走する
+- 切り刻む
+- 釘を打つ
+- 薬を飲む
+- 車に乗る
+- 削る
+- 結婚する
+- 決闘する
+- 蹴る
+- 転がる
+- 壊す
+- コードを書く
+- 強盗する
+- 逆立ちする
+- 避ける
+- 縛る
+- 時間を計る
+- 自慢する
+- 邪魔する
+- 柔道をする
+- 銃を撃つ
+- 座る
+- 咳をする
+- 掃除する
+- 染める
+- 食べる
+- チャンネルをかえる
+- 注油する
+- 捕まえる
+- 捕まる
+- 積み上げる
+- 釣る
+- 照らす
+- 手を振る
+- 手を挙げる
+- 到着する
+- 泣く
+- 殴る
+- 舐める
+- 匂いをかぐ
+- 睨みつける
+- 眠る
+- 鋸で挽く
+- 話す
+- 爆破する
+- パントマイムする
+- 髭を剃る
+- 跪く
+- 引っ越す
+- 冷やす
+- ピアノを弾く
+- ぴょんと跳ぶ
+- 船を漕ぐ
+- 吠える
+- ホッケーをする
+- ぽんと叩く
+- 舞い上がる
+- 真顔になる
+- 負ける
+- 曲げる
+- 守る
+- 迷う
+- 目を瞑る
+- 目を回す
+- メールを書く
+- 潜る
+- 弓をひく
+- 溶接する
+- 横たわる
+- 汚す
+- 落書きする
+- 録音する
+- 笑う
+- 笑わせる
