--- a/config/objects.yml
+++ b/config/objects.yml
@@ -1,101 +1,101 @@
 ---
-- いえ
-- いんたーねっと
+- 家
+- インターネット
 - うさぎ
-- うし
-- うま
-- おうだんほどう
-- おさら
-- おーぷんかー
-- おーろら
-- かびん
-- かぶとむし
-- かめら
-- きのこ
-- きょうぎじょう
-- きょうりゅう
-- くし
-- くっさくき
-- くつ
-- ぐんかん
-- けーき
-- げんきん
-- こあら
-- こうもり
-- こっぷ
-- こーひー
-- さいころ
+- 牛
+- 馬
+- 横断歩道
+- お皿
+- オープンカー
+- オーロラ
+- 花瓶
+- カブトムシ
+- カメラ
+- キノコ
+- 競技場
+- 恐竜
+- 櫛
+- 掘削機
+- 靴
+- 軍艦
+- ケーキ
+- 現金
+- コアラ
+- コウモリ
+- コップ
+- コーヒー
+- サイコロ
 - さくらんぼ
-- さすぺんだー
-- さんぐらす
-- しぇふ
-- しーそー
-- しーる
-- じゃむ
-- すず
-- すのーぼーど
-- すーつ
-- すーぱー
-- すーぷ
-- せみ
-- そうじき
-- そふぁ
-- そーせーじ
-- たいや
-- たいよう
-- たおる
-- たくしー
-- たこ
-- たばこ
-- たまねぎ
-- だんがん
-- だんさー
-- だーつ
-- ちゅーば
-- ちーず
-- てつぱいぷ
-- でんしんばしら
-- でんわ
-- とうふ
-- とらっく
-- どあのぶ
-- どくへび
-- なみ
-- にっき
-- にんぎょう
-- ねこ
-- のみ
-- はち
-- ばいく
-- ばす
-- ばっぐ
-- ばら
-- ひ
-- ひかり
-- ひこうき
-- ひつじ
-- ふくろう
-- ふでばこ
-- ぶらじゃー
-- ぷれいすてーしょん
-- へっどほん
-- へるめっと
-- べっど
-- べんごし
-- まじん
-- まど
-- まるた
-- みいら
-- みっと
-- みずぎ
-- むすびめ
-- もうふ
-- もも
-- やね
-- ゆき
-- ゆみ
-- ゆり
-- りもこん
-- れもん
-- ろっこつ
-- わいん
+- サスペンダー
+- サングラス
+- シェフ
+- シーソー
+- シール
+- ジャム
+- ベル
+- スノーボード
+- スーツ
+- スーパー
+- スープ
+- 蝉
+- 掃除機
+- ソファ
+- ソーセージ
+- タイヤ
+- 太陽
+- タオル
+- タクシー
+- タコ
+- 煙草
+- 玉ねぎ
+- 弾丸
+- ダンサー
+- ダーツ
+- チューバ
+- チーズ
+- 鉄パイプ
+- 電信柱
+- 電話
+- 豆腐
+- トラック
+- ドアノブ
+- 毒蛇
+- 波
+- 日記
+- 人形
+- 猫
+- 蚤
+- 蜂
+- バイク
+- バス
+- バッグ
+- 薔薇
+- 火
+- 光
+- 飛行機
+- 羊
+- 梟
+- 筆箱
+- ブラジャー
+- プレイステーション
+- ヘッドフォン
+- ヘルメット
+- ベッド
+- 弁護士
+- 魔人
+- 窓
+- 丸太
+- ミイラ
+- ミトン
+- 水着
+- 結び目
+- 毛布
+- 桃
+- 屋根
+- 雪
+- 弓
+- 百合
+- リモコン
+- 檸檬
+- 肋骨
+- ワイン
